--- a/me.html
+++ b/me.html
@@ -15,7 +15,7 @@ group: navigation
 
         <br class="clear">
         <div class="timelineMajor">
-            <h2 class="timelineMajorMarker"><span>2013~now</span></h2>
+            <h2 class="timelineMajorMarker"><span>2013~2014</span></h2>
             <dl class="timelineMinor">
                 <dt id="20140530"><a>就职与华康同邦</a></dt>
                 <dd class="timelineEvent" id="20140530EX" style="display:none;">
