--- a/me.html
+++ b/me.html
@@ -5,7 +5,7 @@ header: Myself
 group: navigation
 ---
 {% include JB/setup %}
-
+{% include themes/twitter/time.html %}
 <link rel="stylesheet" href="assets/css/screen.css">
 <div class="timeliner_container">
 
@@ -63,7 +63,8 @@ group: navigation
 
 
 </div><!-- /.container -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
+<script type="text/javascript" src="assets/js/jquery.min.js"></script>
 <script type="text/javascript" src="assets/js/colorbox.js"></script>
 <script type="text/javascript" src="assets/js/timeliner.min.js"></script>
 <script>
