--- a/tags.html
+++ b/tags.html
@@ -5,7 +5,7 @@ header: Posts By Tag
 group: navigation
 ---
 {% include JB/setup %}
-
+{% include themes/twitter/time.html %}
 <ul class="tag_box inline">
   {% assign tags_list = site.tags %}  
   {% include JB/tags_list %}
