--- a/categories.html
+++ b/categories.html
@@ -5,7 +5,7 @@ header: Posts By Category
 group: navigation
 ---
 {% include JB/setup %}
-
+{% include themes/twitter/time.html %}
 <ul class="tag_box inline">
   {% assign categories_list = site.categories %}
   {% include JB/categories_list %}
