--- a/pages.html
+++ b/pages.html
@@ -5,7 +5,7 @@ header: Pages
 group: navigation
 ---
 {% include JB/setup %}
-{% include themes/twitter/time.html %}
+{% include themes/custom-settings/time.html %}
 <h2>All Pages</h2>
 <ul>
 {% assign pages_list = site.pages %}
