--- a/me.html
+++ b/me.html
@@ -5,7 +5,9 @@ header: Myself
 group: navigation
 ---
 {% include JB/setup %}
-{% include themes/custom-settings/time.html %}
+
+<!--{% include themes/custom-settings/time.html %}-->
+
 <link rel="stylesheet" href="assets/css/screen.css">
 <div class="timeliner_container">
 
