--- a/pages.html
+++ b/pages.html
@@ -5,7 +5,9 @@ header: Pages
 group: navigation
 ---
 {% include JB/setup %}
-{% include themes/custom-settings/time.html %}
+
+<!--{% include themes/custom-settings/time.html %}-->
+
 <h2>All Pages</h2>
 <ul>
 {% assign pages_list = site.pages %}
