--- a/archive.html
+++ b/archive.html
@@ -5,6 +5,8 @@ header : Post Archive
 group: navigation
 ---
 {% include JB/setup %}
-{% include themes/custom-settings/time.html %}
+
+<!--{% include themes/custom-settings/time.html %}-->
+
 {% assign posts_collate = site.posts %}
 {% include JB/posts_collate %}
