--- a/categories.html
+++ b/categories.html
@@ -4,8 +4,9 @@ title: 分类
 header: Posts By Category
 group: navigation
 ---
-{% include JB/setup %}
-{% include themes/custom-settings/time.html %}
+
+<!--{% include themes/custom-settings/time.html %}-->
+
 <ul class="tag_box inline">
   {% assign categories_list = site.categories %}
   {% include JB/categories_list %}
