--- a/me.html
+++ b/me.html
@@ -7,8 +7,8 @@ group: navigation
 {% include JB/setup %}
 
 <!--{% include themes/custom-settings/time.html %}-->
-
-<link rel="stylesheet" href="assets/css/screen.css">
+<meta http-equiv = "content-type" content = "text/html; charset=UTF-8" />
+<link rel="stylesheet" href="assets/css/screen.css" xmlns="http://www.w3.org/1999/html">
 <div class="timeliner_container">
 
     <div id="timelineContainer" class="timelineContainer">
@@ -19,21 +19,81 @@ group: navigation
         <div class="timelineMajor">
             <h2 class="timelineMajorMarker"><span>2013~2014</span></h2>
             <dl class="timelineMinor">
-                <dt id="20140530"><a>就职与华康同邦</a></dt>
+                <dt id="20140530"><a>华康同邦</a></dt>
                 <dd class="timelineEvent" id="20140530EX" style="display:none;">
-
-                    <p>2013.3～至今，就职与华康同邦科技有限公司。</p>
-                    <p>在公司对ruby on rails产生了兴趣。</p>
+                    <p>2013.3～至今，就职于华康同邦科技有限公司。</p>
                     <p>
-                        首先，来的第一天学习了<a href="http://www.codecademy.com/tracks/ruby" target="_blank">codecademy</a>中的ruby教程。
-                        然后在一个星期之内学习了<a href="http://railstutorial-china.org/" target="_blank">Ruby on Rails Tutorial</a>。
-                        在接下来的日子慢慢对ruby on rails的快速开发产生了兴趣，因为开发需要，熟练掌握了javascript jquery，以及了解了extjs 和 linux部署等等！
+                        该公司一家专业从事医疗数字化，信息化，智能化相关产品研发的企业。工作地点清华大学FIT楼。翟经理是一个博学，思路开阔，技术潮流的好经理。
                     </p>
-
                     <br class="clear">
                 </dd><!-- /.timelineEvent -->
             </dl><!-- /.timelineMinor -->
-
+            <dl class="timelineMinor">
+                <dt id="20150113"><a>ruby on rails</a></dt>
+                <dd class="timelineEvent" id="20150113EX" style="display:none;">
+                    <div>
+                        <span style="font-size: large">开发环境</span>
+                        <ul>
+                            <li>虚拟机ubuntu系统</li>
+                            <li>rails框架（3~4.2）</li>
+                            <li>mysql mongodb sqlite3数据库</li>
+                            <li>git</li>
+                        </ul>
+                        <span>技能</span>
+                        <ul>
+                            <li>数据存储xml（rexml->nokogiri）</li>
+                            <li>图像处理（carrierwave rmagick）</li>
+                            <li>生成PDF并转换成PNG图片（prawn grim）</li>
+                            <li>代码可重用性（engine）</li>
+                            <li>微信（omniauth-weixin）</li>
+                            <li>rest API规范接口定义</li>
+                            <li>ruby 元编程</li>
+                            <li>阿里云</li>
+                            <li>sidekiq</li>
+                            <li>Nginx 部署</li>
+                            <li>linux 指令</li>
+                            <li>git 指令</li>
+                            <li>...</li>
+                        </ul>
+                    </div>
+                    <br class="clear">
+                </dd><!-- /.timelineEvent -->
+            </dl><!-- /.timelineMinor -->
+            <dl class="timelineMinor">
+                <dt id="20150111"><a>Javascript</a></dt>
+                <dd class="timelineEvent" id="20150111EX" style="display:none;">
+                    <div>
+                        <span>技能</span>
+                        <ul>
+                            <li><a href="https://github.com/Infogosoft/jsdicom" target="_blank">jsdicom</a></li>
+                            <li>用到的框架（jquery/ bootstrap/ easyUI/ jquery mobile/ ExtJS）</li>
+                            <li>自学（CoffeeScript/ AngularJS）</li>
+                        </ul>
+                    </div>
+                    <br class="clear">
+                </dd><!-- /.timelineEvent -->
+            </dl><!-- /.timelineMinor -->
+            <dl class="timelineMinor">
+                <dt id="20150112"><a>golang</a></dt>
+                <dd class="timelineEvent" id="20150112EX" style="display:none;">
+                    <div>
+                        <span style="font-size: large">开发环境</span>
+                        <ul>
+                            <li>虚拟机ubuntu系统/win32/win64</li>
+                            <li>框架（beego revel）</li>
+                            <li>mysql mongodb sqlite3数据库</li>
+                        </ul>
+                        <span>技能</span>
+                        <ul>
+                            <li>框架的运用</li>
+                            <li>写可运行的脚本后端执行</li>
+                            <li><a href="https://github.com/jrallison/go-workers" target="_blank">go-workers</a></li>
+                            <li>...</li>
+                        </ul>
+                    </div>
+                    <br class="clear">
+                </dd><!-- /.timelineEvent -->
+            </dl><!-- /.timelineMinor -->
         </div><!-- /.timelineMajor -->
         <br class="clear">
         <div class="timelineMajor">
@@ -52,7 +112,7 @@ group: navigation
                 <dt id="20130301"><a>java培训</a></dt>
                 <dd class="timelineEvent" id="20130301EX" style="display:none;">
                     <p>
-                        2012.12～2013.3参加国信蓝点培训机构，进行java培训，对以后的IT之路奠定了扎实基础。
+                        2012.12～2013.3参加国信蓝点培训机构，进行java培训，对以后的IT之路奠定了扎实基础。在此感谢黄老师（黄sir）！
                     </p>
 
                     <br class="clear">
