--- a/me.html
+++ b/me.html
@@ -36,7 +36,7 @@ group: navigation
                         <ul>
                             <li>虚拟机ubuntu系统</li>
                             <li>rails框架（3~4.2）</li>
-                            <li>mysql mongodb sqlite3数据库</li>
+                            <li>mysql postgresql sqlite3 redis数据库</li>
                             <li>git</li>
                         </ul>
                         <span>技能</span>
@@ -112,7 +112,7 @@ group: navigation
                 <dt id="20130301"><a>java培训</a></dt>
                 <dd class="timelineEvent" id="20130301EX" style="display:none;">
                     <p>
-                        2012.12～2013.3参加国信蓝点培训机构，进行java培训，对以后的IT之路奠定了扎实基础。在此感谢黄老师（黄sir）！
+                        2012.10～2013.3参加国信蓝点培训机构，进行java培训，对以后的IT之路奠定了扎实基础。在此感谢黄老师（黄sir）！
                     </p>
 
                     <br class="clear">
