--- a/me.html
+++ b/me.html
@@ -34,7 +34,7 @@ group: navigation
                     <div>
                         <span style="font-size: large">开发环境</span>
                         <ul>
-                            <li>虚拟机ubuntu系统</li>
+                            <li>ubuntu系统</li>
                             <li>rails框架（3~4.2）</li>
                             <li>mysql postgresql sqlite3 redis数据库</li>
                             <li>git</li>
@@ -44,7 +44,7 @@ group: navigation
                             <li>数据存储xml（rexml->nokogiri）</li>
                             <li>图像处理（carrierwave rmagick）</li>
                             <li>生成PDF并转换成PNG图片（prawn grim）</li>
-                            <li>代码可重用性（engine）</li>
+                            <li>代码复用、代码重构（engine）</li>
                             <li>微信（omniauth-weixin）</li>
                             <li>rest API规范接口定义</li>
                             <li>ruby 元编程</li>
@@ -86,7 +86,7 @@ group: navigation
                         <span>技能</span>
                         <ul>
                             <li>框架的运用</li>
-                            <li>写可运行的脚本后端执行</li>
+                            <li>shell脚本工具编写</li>
                             <li><a href="https://github.com/jrallison/go-workers" target="_blank">go-workers</a></li>
                             <li>...</li>
                         </ul>
