--- a/me.html
+++ b/me.html
@@ -6,7 +6,7 @@ group: navigation
 ---
 {% include JB/setup %}
 
-<!--{% include themes/custom-settings/time.html %}-->
+{% include themes/custom-settings/time.html %}
 <meta http-equiv = "content-type" content = "text/html; charset=UTF-8" />
 <link rel="stylesheet" href="assets/css/screen.css" xmlns="http://www.w3.org/1999/html">
 <div class="timeliner_container">
