--- a/me.html
+++ b/me.html
@@ -14,7 +14,6 @@ group: navigation
     <div id="timelineContainer" class="timelineContainer">
 
         <div class="timelineToggle"><p><a class="expandAll">+ 展开所有</a></p></div>
-        <br class="clear">
         <div class="timelineMajor">
             <h2 class="timelineMajorMarker"><span>2015.3～Time.now</span></h2>
             <dl class="timelineMinor">
@@ -24,7 +23,39 @@ group: navigation
                     <br class="clear">
                 </dd><!-- /.timelineEvent -->
             </dl><!-- /.timelineMinor -->
-        </div><!-- /.timelineMajor -->
+            <dl class="timelineMinor">
+                <dt id="20150326"><a>参与项目</a></dt>
+                <dd class="timelineEvent" id="20150326EX" style="display:none;">
+                    <ul>
+                        <li>code https://code.csdn.net </li>
+                        <li>产品库 http://toolwith.csdn.net </li>
+                        <li>华为2期 gitlab isource sidekiq </li>
+                        <li>华为3期 git-mm workhorse queue_server </li>
+                        <li>12301国家旅游局 导游端 旅游局端 举报平台</li>
+                        <li>...</li>
+                    </ul>
+                    <br class="clear">
+                </dd><!-- /.timelineEvent -->
+            </dl><!-- /.timelineMinor -->
+            <dl class="timelineMinor">
+                <dt id="20150327"><a>技能get</a></dt>
+                <dd class="timelineEvent" id="20150327EX" style="display:none;">
+                    <ul>
+                        <li>drb分布式 </li>
+                        <li>git(蒋鑫leader)</li>
+                        <li>golang(git) </li>
+                        <li>nodejs(12301) </li>
+                        <li>sidekiq(同步) </li>
+                        <li>redis存储</li>
+                        <li>mongodb</li>
+                        <li>python</li>
+                        <li>docker</li>
+                        <li>VIM</li>
+                        <li>...</li>
+                    </ul>
+                    <br class="clear">
+                </dd><!-- /.timelineEvent -->
+            </dl><!-- /.timelineMinor -->
         <br class="clear">
         <div class="timelineMajor">
             <h2 class="timelineMajorMarker"><span>2013~2015.3</span></h2>
